# pymcap

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: .gitignore
docs/source/: conf.py  index.rst
src/pymcap/: __init__.py  core.py
tests/: test_core.py
