[project]
name = "pymcap"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sashank-tirumala", email = "sashank@machines.run" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.3",
    "black>=24.8.0",
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autodoc-typehints>=2.0.1",
    "myst-parser>=3.0.1",
    "pre-commit>=3.5.0",
    "ipython>=8.12.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pymcap"]
