[project]
name = "pymcap"
version = "0.1"
description = "A python package to interact with the MCAP CLI Tool"
authors = [
    { name = "sashank-tirumala", email = "stsashank6@gmail.com" }
]
dependencies = [
    "requests>=2.24.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling==1.26.3", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.3",
    "black>=24.8.0",
    "pre-commit>=3.5.0",
    "ipython>=8.12.3",
    "mcap>=1.2.2",
]
[tool.hatch.build.targets.sdist]
include = [
    "src/**/*.py",
    "src/pymcap/binaries/**/*",
]
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["src/pymcap"]
include = [
    "src/pymcap/**/*.py",
    "src/pymcap/binaries/**/*"
]
artifacts = ["src/pymcap/**/*.bin"]
ignore-vcs = true
